update dependencies
- add indentation settings